dataengines/devicenotifications: port away from the dataengine interface
Task: https://phabricator.kde.org/T13317

--- a/applets/devicenotifier/CMakeLists.txt
+++ b/applets/devicenotifier/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_subdirectory(plugin)
+
 plasma_install_package(package org.kde.plasma.devicenotifier)
 
 install(FILES openWithFileManager.desktop DESTINATION ${KDE_INSTALL_DATADIR}/solid/actions )
