lookandfeel: Factor out VirtualKeyboard's Loader
They were functionally identical, but implementation bits were
differently named, reordered and generally slightly diverged from each
other.

--- a/lookandfeel/CMakeLists.txt
+++ b/lookandfeel/CMakeLists.txt
@@ -14,6 +14,7 @@ ecm_target_qml_sources(components SOURCES
     components/UserList.qml
     components/VirtualKeyboard.qml
     components/VirtualKeyboard_wayland.qml
+    components/VirtualKeyboardLoader.qml
     components/WallpaperFader.qml
 )
 target_sources(components PRIVATE components/componentsplugin.cpp)
