appiumtests/mediacontrollertest: port to ActionBuilder
It saves a custom binding of the fake input protocol and makes the GLib
main loop spun in the test script itself, which avoids a race when
QMetaObject::invokeMethod blocks the main loop when performing touch actions
and GDBus in Python cannot process new player messages due to global
interpreter lock.

--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -16,8 +16,6 @@ if(NOT SeleniumWebDriverATSPI_FOUND AND NOT DEFINED ENV{KDECI_BUILD})
     return()
 endif()
 
-add_subdirectory(inputsynth)
-
 add_test(
     NAME analogclocktest
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/analogclocktest.py
@@ -98,8 +96,7 @@ add_test(
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/mediacontrollertest.py --failfast
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
-execute_process(COMMAND gcc -print-file-name=libasan.so OUTPUT_VARIABLE LIBASAN_PATH ECHO_OUTPUT_VARIABLE OUTPUT_STRIP_TRAILING_WHITESPACE)
-set_tests_properties(mediacontrollertest PROPERTIES TIMEOUT 300 ENVIRONMENT "LD_PRELOAD=${LIBASAN_PATH};CMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}" REPEAT UNTIL_PASS:2)
+set_tests_properties(mediacontrollertest PROPERTIES TIMEOUT 300 ENVIRONMENT "GDK_BACKEND=wayland")
 
 add_test(
     NAME systemtraytest_x11
