Get rid of old font dpi settings
add a config update script to remove from kcmfonts config file forceFontDPIWayland

otherwise some apps, like GTK ones might end up being scaled twice

--- a/kcms/fonts/CMakeLists.txt
+++ b/kcms/fonts/CMakeLists.txt
@@ -40,6 +40,8 @@ add_custom_command(TARGET kcm_fonts POST_BUILD
 
 install( FILES ${CMAKE_CURRENT_BINARY_DIR}/kcm_fonts_init.so DESTINATION ${KDE_INSTALL_PLUGINDIR}/plasma/kcminit)
 
+add_subdirectory(kconf_update)
+
 if (BUILD_TESTING)
    add_subdirectory(autotests)
 endif()
