--- a/dataengines/activities/CMakeLists.txt
+++ b/dataengines/activities/CMakeLists.txt
@@ -14,7 +14,7 @@ add_library(plasma_engine_activities MODULE ${activity_engine_SRCS})
 target_link_libraries(plasma_engine_activities
                       KF6::CoreAddons
                       Plasma::Plasma
-                      KF6::Plasma5Support
+                      Plasma::Plasma5Support
                       Plasma::Activities
                       KF6::I18n
                       KF6::Service
