--- a/dataengines/applicationjobs/CMakeLists.txt
+++ b/dataengines/applicationjobs/CMakeLists.txt
@@ -13,7 +13,7 @@ target_link_libraries(plasma_engine_applicationjobs
   KF6::I18n
   KF6::KIOCore
   Plasma::Plasma
-  KF6::Plasma5Support
+  Plasma::Plasma5Support
   KF6::Service
   PW::LibNotificationManager
 )
