--- a/dataengines/filebrowser/CMakeLists.txt
+++ b/dataengines/filebrowser/CMakeLists.txt
@@ -6,7 +6,7 @@ set(filebrowser_engine_SRCS
 kcoreaddons_add_plugin(plasma_engine_filebrowser SOURCES ${filebrowser_engine_SRCS} INSTALL_NAMESPACE plasma5support/dataengine)
 target_link_libraries(plasma_engine_filebrowser
     Plasma::Plasma
-    KF6::Plasma5Support
+    Plasma::Plasma5Support
     KF6::Service
     KF6::KIOCore
 )
