--- a/dataengines/keystate/CMakeLists.txt
+++ b/dataengines/keystate/CMakeLists.txt
@@ -12,7 +12,7 @@ kcoreaddons_add_plugin(plasma_engine_keystate SOURCES ${keystate_engine_SRCS} IN
 target_link_libraries(plasma_engine_keystate
     KF6::GuiAddons
     Plasma::Plasma
-    KF6::Plasma5Support
+    Plasma::Plasma5Support
     KF6::Service
     KF6::KIOCore
     KF6::I18n
