--- a/dataengines/packagekit/CMakeLists.txt
+++ b/dataengines/packagekit/CMakeLists.txt
@@ -9,7 +9,7 @@ set(packagekit_engine_SRCS
 
 kcoreaddons_add_plugin(plasma_engine_packagekit SOURCES ${packagekit_engine_SRCS} INSTALL_NAMESPACE plasma5support/dataengine)
 
-target_link_libraries(plasma_engine_packagekit Plasma::Plasma KF6::Plasma5Support KF6::CoreAddons Qt::DBus )
+target_link_libraries(plasma_engine_packagekit Plasma::Plasma Plasma::Plasma5Support KF6::CoreAddons Qt::DBus )
 
 install(FILES packagekit.operations
     DESTINATION ${PLASMA5SUPPORT_DATA_INSTALL_DIR}/services)
