--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ find_package(KF6 ${KF6_MIN_VERSION} REQUIRED COMPONENTS
                     CoreAddons KIO Prison Package
                     GuiAddons Archive ItemModels IconThemes UnitConversion TextEditor StatusNotifierItem
                     OPTIONAL_COMPONENTS DocTools)
-find_package(KF6 ${PROJECT_VERSION} REQUIRED COMPONENTS Plasma5Support)
+find_package(Plasma5Support ${PROJECT_VERSION} REQUIRED)
 find_package(Plasma ${PROJECT_VERSION} REQUIRED)
 find_package(PlasmaQuick ${PROJECT_VERSION} REQUIRED)
 find_package(KWayland ${PROJECT_VERSION} REQUIRED)
