--- a/dataengines/devicenotifications/CMakeLists.txt
+++ b/dataengines/devicenotifications/CMakeLists.txt
@@ -12,7 +12,7 @@ add_library(plasma_engine_devicenotifications MODULE ${device_notifications_engi
 target_link_libraries(plasma_engine_devicenotifications 
     KF6::Service
     Plasma::Plasma
-    KF6::Plasma5Support
+    Plasma::Plasma5Support
     KF6::Solid
     KF6::I18n
     KSysGuard::ProcessCore
