--- a/klipper/CMakeLists.txt
+++ b/klipper/CMakeLists.txt
@@ -62,7 +62,7 @@ set(plasma_engine_clipboard_SRCS clipboardengine.cpp clipboardservice.cpp clipbo
 kcoreaddons_add_plugin(plasma_engine_clipboard SOURCES ${plasma_engine_clipboard_SRCS} INSTALL_NAMESPACE "plasma5support/dataengine")
 target_link_libraries(plasma_engine_clipboard
     libklipper_common_static
-    KF6::Plasma5Support
+    Plasma::Plasma5Support
 )
 
 install(FILES org.kde.plasma.clipboard.operations DESTINATION ${PLASMA5SUPPORT_DATA_INSTALL_DIR}/services)
