--- a/libcolorcorrect/CMakeLists.txt
+++ b/libcolorcorrect/CMakeLists.txt
@@ -15,7 +15,7 @@ target_include_directories(colorcorrect PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURREN
 
 target_link_libraries(colorcorrect
                     PUBLIC
-                      KF6::Plasma5Support
+                      Plasma::Plasma5Support
                       KF6::ConfigCore
 
                       Qt::Core
