--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,5 +4,6 @@
 include:
   - project: sysadmin/ci-utilities
     file:
+      - /gitlab-templates/clang-format.yml
       - /gitlab-templates/linux-qt6.yml
       - /gitlab-templates/freebsd-qt6.yml
