Enable translations for session shortcuts kded module

--- a/startkde/session-shortcuts/CMakeLists.txt
+++ b/startkde/session-shortcuts/CMakeLists.txt
@@ -1,6 +1,8 @@
 # SPDX-License-Identifier: BSD-3-Clause
 # SPDX-FileCopyrightText: 2023 David Edmundson <davidedmundson@kde.org>
 
+add_definitions(-DTRANSLATION_DOMAIN=\"session-shortcuts-kded\")
+
 kcoreaddons_add_plugin(plasma-session-shortcuts SOURCES main.cpp INSTALL_NAMESPACE "kf6/kded")
 
 target_link_libraries(plasma-session-shortcuts
