Fix the translation templates (no version suffix for consistency)
While in other cases we have kept the version suffix in translation
templates, this has not been done for plasma modules.
As translation templates which use the "5" suffix should be fixed
anyway, follow the same pattern of the rest of Plasma modules and
just remove it instead of changing it to "6".

--- a/kioworkers/applications/CMakeLists.txt
+++ b/kioworkers/applications/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_definitions(-DTRANSLATION_DOMAIN=\"kio5_applications\")
+add_definitions(-DTRANSLATION_DOMAIN=\"kio_applications\")
 
 kcoreaddons_add_plugin(kio_applications SOURCES kio_applications.cpp INSTALL_NAMESPACE "kf6/kio")
 set_target_properties(kio_applications PROPERTIES OUTPUT_NAME "applications")
