dataengines/keystate: port away from dataengine
Task: https://phabricator.kde.org/T13329

Usage:

```qml
import QtQuick
import org.kde.plasma.private.keyboardindicator as KI

Text {
    text: capsLockState.locked ? "locked" : "unlocked"
    KI.KeyState {
        id: capsLockState
        key: Qt.Key_CapsLock
    }
}
```

--- a/applets/CMakeLists.txt
+++ b/applets/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(brightness)
 add_subdirectory(calendar)
 add_subdirectory(devicenotifier)
 add_subdirectory(digital-clock)
+add_subdirectory(keyboardindicator)
 add_subdirectory(kicker)
 add_subdirectory(mediacontroller)
 add_subdirectory(panelspacer)
