Use StartupNotify now instead of X-KDE-StartupNotify

--- a/gmenu-dbusmenu-proxy/gmenudbusmenuproxy.desktop
+++ b/gmenu-dbusmenu-proxy/gmenudbusmenuproxy.desktop
@@ -52,7 +52,7 @@ Name[x-test]=xxGMenuDBusMenuProxyxx
 Name[zh_CN]=GMenuDBusMenuProxy
 Name[zh_TW]=GMenuDBusMenuProxy
 Type=Application
-X-KDE-StartupNotify=false
+StartupNotify=false
 NoDisplay=true
 OnlyShowIn=KDE;
 X-KDE-autostart-phase=1
