--- a/kcms/kfontinst/apps/org.kde.kfontview.desktop
+++ b/kcms/kfontinst/apps/org.kde.kfontview.desktop
@@ -51,7 +51,7 @@ Name[zh_CN]=KFontView
 Name[zh_TW]=KFontView
 Exec=kfontview %U
 Icon=kfontview
-X-KDE-StartupNotify=true
+StartupNotify=true
 Type=Application
 MimeType=application/x-font-ttf;application/x-font-type1;application/x-font-otf;application/x-font-pcf;application/x-font-bdf;application/vnd.kde.fontspackage;font/otf;font/ttf;font/collection;
 GenericName=Font Viewer
