--- a/xembed-sni-proxy/xembedsniproxy.desktop
+++ b/xembed-sni-proxy/xembedsniproxy.desktop
@@ -56,7 +56,7 @@ Name[x-test]=xxXembedSniProxyxx
 Name[zh_CN]=XembedSniProxy
 Name[zh_TW]=XembedSniProxy
 Type=Application
-X-KDE-StartupNotify=false
+StartupNotify=false
 NoDisplay=true
 OnlyShowIn=KDE;
 X-KDE-autostart-phase=0
