--- a/libtaskmanager/autotests/data/applications/GammaRay.desktop
+++ b/libtaskmanager/autotests/data/applications/GammaRay.desktop
@@ -10,4 +10,4 @@ Icon=GammaRay
 Type=Application
 Categories=Qt;Development;
 Keywords=Qt;development;runtime;
-X-KDE-StartupNotify=true
+StartupNotify=true
