dataengines/executable: confirm before running commands
The dataengine can't just let a widget run arbitrary commands.

A new environment variable "PLASMA_DATAENGINE_DISABLE_COMMANDS" is
added to disable the dataengine for convenience.

--- a/dataengines/executable/CMakeLists.txt
+++ b/dataengines/executable/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_definitions(-DTRANSLATION_DOMAIN=\"plasma_engine_executable\")
+
 set(executable_engine_SRCS
     executable.cpp
     executable.h
@@ -10,4 +12,8 @@ target_link_libraries(plasma_engine_executable
     Plasma::Plasma5Support
     KF6::Service
     KF6::CoreAddons
+    KF6::I18n
+    KF6::Notifications
 )
+
+install(FILES plasma_dataengine_executable.notifyrc DESTINATION ${KDE_INSTALL_KNOTIFYRCDIR})
