[applets/digitalclock] Store enabled plugins by id instead of full path
Typically we store plugins by their id instead of the full path, and for good reason.

The location of the plugin on disk may change, most importantly when going from Qt5 to Qt6.

This makes sure that if this happens the stored values can still be read

(cherry picked from commit bda4eb0779f01abea1117f67e83ae0bbea9f4174)

--- a/components/calendar/CMakeLists.txt
+++ b/components/calendar/CMakeLists.txt
@@ -22,3 +22,6 @@ install(TARGETS calendarplugin DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/plasma/
 install(DIRECTORY qml/ DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/plasma/workspace/calendar)
 
 ecm_generate_qmltypes(org.kde.plasma.workspace.calendar 2.0 DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/plasma/workspace/calendar)
+
+install(PROGRAMS kconf_update/migrate-calendar-to-plugin-id.py DESTINATION ${KDE_INSTALL_KCONFUPDATEDIR})
+install(FILES kconf_update/migrate-calendar-to-plugin-id.upd DESTINATION ${KDE_INSTALL_KCONFUPDATEDIR})
