--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -89,4 +89,5 @@ RuntimeDependencies:
     'plasma/kglobalacceld': '@same'
 
 Options:
+  ctest-arguments: '--repeat until-pass:5'
   require-passing-tests-on: [ '@all' ]
