appiumtests: add test for SystemDialog
Make sure the dialog can be opened and there is no syntax error.


(cherry picked from commit 858114cfd1793aeb561a2505ff324c07ca86c96a)

--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -16,6 +16,8 @@ if(NOT SeleniumWebDriverATSPI_FOUND AND NOT DEFINED ENV{KDECI_BUILD})
     return()
 endif()
 
+add_subdirectory(components_tests)
+
 add_test(
     NAME analogclocktest
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/analogclocktest.py
