applets/batterymonitor: port applet from dataengine

--- a/applets/batterymonitor/CMakeLists.txt
+++ b/applets/batterymonitor/CMakeLists.txt
@@ -1,1 +1,10 @@
+add_subdirectory(plugin)
+
+ecm_qt_install_logging_categories(
+        EXPORT APPLETS::BATTERYMONITOR
+        FILE applets/batterymonitor.categories
+        DESTINATION ${KDE_INSTALL_LOGGINGCATEGORIESDIR}
+)
+
 plasma_install_package(package org.kde.plasma.battery)
+
