applets/brightness: port to ecm_add_qml_module and declarative type registration

--- a/applets/brightness/plugin/CMakeLists.txt
+++ b/applets/brightness/plugin/CMakeLists.txt
@@ -1,13 +1,12 @@
 # SPDX-FileCopyrightText: 2024 Bohdan Onofriichuk <bogdan.onofriuchuk@gmail.com>
 # SPDX-License-Identifier: BSD-3-Clause
 
-ecm_add_qml_module(brightnesscontrolplugin URI org.kde.plasma.private.brightnesscontrolplugin)
+ecm_add_qml_module(brightnesscontrolplugin URI org.kde.plasma.private.brightnesscontrolplugin GENERATE_PLUGIN_SOURCE)
 target_sources(brightnesscontrolplugin PRIVATE
     nightcolorinhibitor.cpp
     nightcolormonitor.cpp
     screenbrightnesscontrol.cpp
     keyboardbrightnesscontrol.cpp
-    plugin.cpp
 )
 target_link_libraries(brightnesscontrolplugin PRIVATE
     Qt::Core
