--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ include(ECMDeprecationSettings)
 include(ECMQmlModule)
 
 find_package(Qt6 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Svg Widgets Quick QuickWidgets Concurrent Network Core5Compat DBus ShaderTools)
+find_package(QCoro6 REQUIRED COMPONENTS Core DBus)
 find_package(KF6 ${KF6_MIN_VERSION} REQUIRED COMPONENTS
                     Auth Parts Runner Notifications NotifyConfig NewStuff Wallet IdleTime
                     Svg Declarative I18n KCMUtils TextWidgets Crash GlobalAccel DBusAddons
