session-restore: Avoid apps managed by ksmserver
If a session is saved manually plasma-fallback-session-restore and
ksmserver can contain the same entries. To avoid double-starting, the
fallback-session-restore introspects the ksmserver config and skips
accordingly.

This also migrates to kcfg to keep future defaults in sync easier.

It's not the best architecture, but it's intended as a fallback mechanism.

CCBUG: 4009

--- a/startkde/session-restore/CMakeLists.txt
+++ b/startkde/session-restore/CMakeLists.txt
@@ -17,15 +17,18 @@ target_link_libraries(plasma-fallback-session-save
     Wayland::Client
 )
 
+
 add_executable( plasma-fallback-session-restore
     restore.cpp
     ${shared_debug_SRCS}
 )
+kconfig_add_kcfg_files(plasma-fallback-session-restore smserversettings.kcfgc)
 
 target_link_libraries( plasma-fallback-session-restore
     Qt6::Core
     KF6::KIOGui
     KF6::ConfigCore
+    KF6::ConfigGui
 )
 
 install(TARGETS plasma-fallback-session-restore DESTINATION ${KDE_INSTALL_FULL_LIBEXECDIR})
