startplasma: port from phonon to canberra and properly support sound themes
canberra has the advantage that it can be powered by libpulse and as
such is loads lighter and faster than phonon

--- a/startkde/CMakeLists.txt
+++ b/startkde/CMakeLists.txt
@@ -24,7 +24,7 @@ target_link_libraries(startplasma PUBLIC
     KF6::DBusAddons
     KF6::Notifications
     KF6::Package
-    ${PHONON_LIBRARIES}
+    Canberra::Canberra
     PW::KWorkspace
     lookandfeelmanager
 )
