--- a/applets/brightness/plugin/CMakeLists.txt
+++ b/applets/brightness/plugin/CMakeLists.txt
@@ -1,4 +1,5 @@
 # SPDX-FileCopyrightText: 2024 Bohdan Onofriichuk <bogdan.onofriuchuk@gmail.com>
+# SPDX-FileCopyrightText: 2024 Natalie Clarius <natalie.clarius@kde.org>
 # SPDX-License-Identifier: BSD-3-Clause
 
 ecm_add_qml_module(brightnesscontrolplugin URI org.kde.plasma.private.brightnesscontrolplugin GENERATE_PLUGIN_SOURCE)
@@ -7,6 +8,7 @@ target_sources(brightnesscontrolplugin PRIVATE
     nightcolormonitor.cpp
     screenbrightnesscontrol.cpp
     keyboardbrightnesscontrol.cpp
+    keyboardcolorcontrol.cpp
 )
 target_link_libraries(brightnesscontrolplugin PRIVATE
     Qt::Core
