interactiveconsole(i18n): set domain & add Messages.sh
Console output was spammed with warning messages:

`Domain is not set for this string`

--- a/interactiveconsole/CMakeLists.txt
+++ b/interactiveconsole/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_definitions(-DTRANSLATION_DOMAIN=\"plasma_interactiveconsole\")
+
 set(interactiveconsole_SRCS
     interactiveconsole.cpp
     main.cpp
