plasma-apply-wallpaperimage: add a test
to make sure it works as expected

--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -20,3 +20,4 @@ add_subdirectory(applets)
 add_subdirectory(components_tests)
 add_subdirectory(kcms)
 add_subdirectory(krunner)
+add_subdirectory(wallpapers)
