--- a/kcms/kfontinst/viewpart/CMakeLists.txt
+++ b/kcms/kfontinst/viewpart/CMakeLists.txt
@@ -8,7 +8,7 @@ set(kfontviewpart_PART_SRCS ${libkfontinstview_SRCS} ${libkfontinstdbusiface_SRC
 
 add_library(kfontviewpart MODULE ${kfontviewpart_PART_SRCS})
 
-target_link_libraries(kfontviewpart KF6::Archive KF6::Parts KF6::XmlGui kfontinstui kfontinst )
+target_link_libraries(kfontviewpart KF6::Archive KF6::Parts KF6::XmlGui KF6::WindowSystem kfontinstui kfontinst )
 
 install(TARGETS kfontviewpart  DESTINATION ${KDE_INSTALL_PLUGINDIR}/kf6/parts )
 
