--- a/kcms/kfontinst/apps/CMakeLists.txt
+++ b/kcms/kfontinst/apps/CMakeLists.txt
@@ -42,7 +42,8 @@ install(TARGETS kfontinst_bin ${KDE_INSTALL_TARGETS_DEFAULT_ARGS} )
 install(TARGETS kfontprint_bin DESTINATION ${KDE_INSTALL_LIBEXECDIR} )
 install(TARGETS kfontview_bin ${KDE_INSTALL_TARGETS_DEFAULT_ARGS} )
 install(FILES kfontviewui.rc DESTINATION ${KDE_INSTALL_KXMLGUIDIR}/kfontview )
-install(PROGRAMS org.kde.kfontview.desktop DESTINATION ${KDE_INSTALL_APPDIR} )
+install(FILES org.kde.kfontview.desktop DESTINATION ${KDE_INSTALL_APPDIR} )
+install(FILES org.kde.kfontinst.desktop DESTINATION ${KDE_INSTALL_APPDIR} )
 install(FILES installfont.desktop DESTINATION ${KDE_INSTALL_DATADIR}/kio/servicemenus)
 
 ecm_install_icons( ICONS
