--- a/klipper/autotests/CMakeLists.txt
+++ b/klipper/autotests/CMakeLists.txt
@@ -4,7 +4,7 @@ include(ECMMarkAsTest)
 add_executable(testHistory historytest.cpp)
 target_link_libraries(testHistory
     Qt::Test
-    libklipper_common_static
+    klipper_common
 )
 add_test(NAME klipper-testHistory COMMAND testHistory)
 ecm_mark_as_test(testHistory)
@@ -13,7 +13,7 @@ ecm_mark_as_test(testHistory)
 add_executable(testHistoryModel historymodeltest.cpp)
 target_link_libraries(testHistoryModel
     Qt::Test
-    libklipper_common_static
+    klipper_common
 )
 add_test(NAME klipper-testHistoryModel COMMAND testHistoryModel)
 ecm_mark_as_test(testHistoryModel)
@@ -22,12 +22,12 @@ ecm_mark_as_test(testHistoryModel)
 add_executable(testKlipperUtils utilstest.cpp)
 target_link_libraries(testKlipperUtils
     Qt::Test
-    libklipper_common_static
+    klipper_common
 )
 add_test(NAME klipper-testUtils COMMAND testKlipperUtils)
 ecm_mark_as_test(testKlipperUtils)
 
 # Klipper test
 ecm_add_test(klippertest.cpp TEST_NAME klippertest
-    LINK_LIBRARIES Qt::Test libklipper_common_static)
+    LINK_LIBRARIES Qt::Test klipper_common)
 
