--- a/plasmacalendarintegration/qmlhelper/CMakeLists.txt
+++ b/plasmacalendarintegration/qmlhelper/CMakeLists.txt
@@ -1,10 +1,21 @@
-
-add_library(holidayeventshelperplugin SHARED holidayeventshelperplugin.cpp)
-
-target_link_libraries(holidayeventshelperplugin Qt::Qml
-                                                Qt::Core
-                                                KF6::ConfigCore
+ecm_add_qml_module(holidayevents
+    URI "org.kde.plasma.private.holidayevents"
+    GENERATE_PLUGIN_SOURCE
 )
 
-install(TARGETS holidayeventshelperplugin DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/holidayeventshelperplugin)
-install(FILES qmldir DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/holidayeventshelperplugin)
+target_sources(holidayevents
+    PRIVATE
+        holidayregionsconfig.h
+        holidayregionsconfig.cpp
+)
+
+target_link_libraries(holidayevents
+    PRIVATE
+        Qt::Qml
+        Qt::Core
+        KF6::ConfigCore
+)
+
+ecm_finalize_qml_module(holidayevents
+    DESTINATION ${KDE_INSTALL_QMLDIR}
+)
