applets: rename 'night color' -> 'night light'
It was renamed in the user facing strings and the KWin backend, so let's adapt the code-internal usages here too to make it less messy.

--- a/applets/brightness/plugin/CMakeLists.txt
+++ b/applets/brightness/plugin/CMakeLists.txt
@@ -4,8 +4,8 @@
 
 ecm_add_qml_module(brightnesscontrolplugin URI org.kde.plasma.private.brightnesscontrolplugin GENERATE_PLUGIN_SOURCE)
 target_sources(brightnesscontrolplugin PRIVATE
-    nightcolorinhibitor.cpp
-    nightcolormonitor.cpp
+    nightlightinhibitor.cpp
+    nightlightmonitor.cpp
     screenbrightnesscontrol.cpp
     keyboardbrightnesscontrol.cpp
     keyboardcolorcontrol.cpp
